--- a/index - Copy.html
+++ b/index - Copy.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <div>    
-    <p>Your Name – <a href="https://www.linkedin.com/in/joseph-b-a267151a4" target="_blank"> Joseph Baker</a> </p>
+    <h3>Your Name – <a href="https://www.linkedin.com/in/joseph-b-a267151a4" target="_blank"></a></h3><p>Joe Baker</p>
 
-    <p>Your Bio – Need advice here as not sure what to write</p>
+    <h3>Your Bio –</h3><p>Need advice here as not sure what to write</p>
 
-    <p> Your 3 episodes from school, jobs, side projects, etc where you’ve faced an issue/challenge, how you overcame them and what
-    happened afterwards- </p>
+    <h3>Your 3 episodes from school, jobs, side projects, etc where you’ve faced an issue/challenge, how you overcame them and what
+    happened afterwards-</h3>
 </div>   
  <ol>
     <li>Gaining trust with suppliers – Initially we overcame this buy paying pro-forma, after a period of paying upfront we paid on time, to ensure a good long term working partnership. This proved to be of benefit numerous times when materials were scarce, having called on relationships built overtime to secure what we needed.</li>
@@ -25,7 +25,7 @@
             
  </ol>
 
-    <p>Your Education and/or Professional Experiences –</p>
+    <h3>Your Education and/or Professional Experiences –</h3>
     <p>No formal school qualifications, left school at 13 as part of an initiative to send disruptive children to college after exhausting other avenues of behavioural management. Since then, I have personally paid to put myself through all of my qualifications to climb the pay/experience ladder.</p>
 
 <ul>
@@ -38,10 +38,10 @@
 <p><a href="https://www.ciht.org.uk/become-a-member/ciht-membership-for-individuals/member-mciht/" target="_blank">MCIHT</a> – Became a Member of the Chartered Institute of Highways and Transport</p>
 <p><a href="https://www.theiet.org/membership/become-a-member/miet-and-tmiet-membership/" target="_blank">MIET</a> – Became a Member of the Institute of Engineering and Technology</p>
 
-<p>Your Skills-</p>
+<h3>Your Skills-</h3>
 <p>I haven't defined my skills yet, work to do with <a href="https://www.c2d.co.uk/c2d/" target="_blank">John.</a></p>
 
-<p>Your Recent Projects-</p>
+<h3>Your Recent Projects-</h3>
 <p>I am currently working on bringing to life an idea I had whilst working constructing utility networks. Working with industry experts, tech and design partners we are close to testing the prototype. We are hoping this revolutionises the way the industry performs the tasks we are automating and really benefits for the efficiencies it drives, saving time and money allowing the client to be more productive with the increasingly scarce resource.</p>
 
 </body>
